syntax = "proto3";

package user.v1;

option go_package = "github.com/smile-ko/go-template/docs/proto/user/v1/gen;userv1";

message GetUserByIdReq {
  int32 id = 1;
}

message GetUsersByIdsReq {
  repeated int32 ids = 1;
}

message CreateUserReq {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
}

message NewUserIdResp {
  int32 id = 1;
}

message PublicUserInfo {
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
}

message PublicUserInfoResp {
  PublicUserInfo user = 1;
}

message PublicUsersInfoResp {
  repeated PublicUserInfo users = 1;
}

service UserService {
  rpc GetUserById(GetUserByIdReq) returns (PublicUserInfoResp);
  rpc GetUsersByIds(GetUsersByIdsReq) returns (PublicUsersInfoResp);
  rpc CreateUser(CreateUserReq) returns (NewUserIdResp);
}
